clean swagger model names
